bin/testsuite/tests/compiler/src/errors/compiler1463.swg
#global testerror "Err0722"
var @toto = 0